--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
       <div class="card-header">
         <div class="card-heading">
-          <img src="src/pratik.jpg" alt="profile">
+          <img src="pratik.jpg" alt="profile">
         </div>
         <div class="card-body">
           <h1 class="name">Pratik Sah</h1>
