--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h1 class="name">Pratik Sah</h1>
           <p class="role">Flutter Developer</p>
           <p class="bio">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-          <button class="btn hire-btn">Hire Me</button>
+          <a href="https://dribbble.com/pratiksah" target="_blank" class="btn hire-btn">Hire Me</a>
           <hr>
           <div class="profile">
             <div class="linkedin">
