Updated profile links.

--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
           <hr>
           <div class="profile">
             <div class="linkedin">
-              <i class="fab fa-linkedin">
-                <!-- your a tg here -->
-              </i>
+              <a href="https://www.linkedin.com/in/pratiksah/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+              </a>
             </div>
             <div class="twitter">
-              <i class="fab fa-twitter-square"></i>
+              <a href="https://twitter.com/the_pratik_sah" target="_blank">
+                <i class="fab fa-twitter-square"></i>
+              </a>
             </div>
             <div class="dribble">
-              <i class="fab fa-dribbble-square"></i>
+              <a href="https://dribbble.com/pratiksah" target="_blank">
+                <i class="fab fa-dribbble-square"></i>
+              </a>
             </div>
           </div>
         </div>
