--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="card-body">
           <h1 class="name">Pratik Sah</h1>
-          <p class="role">Flutter Developer</p>
+          <p class="role">MERN Stack Developer</p>
           <p class="bio">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
           <button onclick="window.open('https://dribbble.com/pratiksah', '_blank')" class="btn hire-btn">
             Hire Me
